--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.7.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-tsdoc": "^0.2.17"
   }
 }
