--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -27,9 +27,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-plugin-vue": "^9.7.0"
   },
-  "devDependencies": {
-    "eslint-plugin-tsdoc": "^0.2.17"
-  }
+  "devDependencies": {}
 }
