--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -33,5 +33,8 @@
   },
   "devDependencies": {
     "prettier": "^2.8.1"
+  },
+  "resolutions": {
+    "eslint-plugin-import": "^2.26.0"
   }
 }
