--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -35,6 +35,6 @@
     "prettier": "^2.8.1"
   },
   "resolutions": {
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "2.26.0"
   }
 }
