--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "devDependencies": {
     "prettier": "^2.8.1"
   },
-  "resolutions": {
-    "eslint-plugin-import": "2.26.0"
+  "pnpm": {
+    "overrides": {
+      "eslint-plugin-import": "latest"
+    }
   }
 }
