--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint-plugin-import": "latest"
+      "eslint-plugin-import": "^2.26.0"
     }
   }
 }
