--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -36,7 +36,7 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint-plugin-import": "^2.26.0"
+      "eslint-plugin-import": "latest"
     }
   }
 }
