--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.21",
+  "version": "1.2.22pnpm import",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -30,11 +30,11 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-tsdoc": "0.2.17",
-    "eslint-plugin-vue": "9.9.0",
+    "eslint-plugin-vue": "9.10.0",
     "eslint-plugin-vuetify": "2.0.0-beta.2",
     "vue-eslint-parser": "9.1.0"
   },
   "devDependencies": {
-    "prettier": "2.8.6"
+    "prettier": "2.8.7"
   }
 }
