--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.26",
+  "version": "1.2.27",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -16,11 +16,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "1.2.0",
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
+    "@rushstack/eslint-patch": "1.3.0",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
     "@vue/eslint-config-typescript": "11.0.3",
-    "eslint": "8.40.0",
+    "eslint": "8.41.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-cypress": "2.13.3",
@@ -30,9 +30,9 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-tsdoc": "0.2.17",
-    "eslint-plugin-vue": "9.11.1",
-    "eslint-plugin-vuetify": "2.0.0-beta.4",
-    "vue-eslint-parser": "9.2.1"
+    "eslint-plugin-vue": "9.14.1",
+    "eslint-plugin-vuetify": "2.0.1",
+    "vue-eslint-parser": "9.3.0"
   },
   "devDependencies": {
     "prettier": "2.8.8"
