--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.31",
+  "version": "1.2.32",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -16,11 +16,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@nuxt/eslint-config": "0.1.1",
     "@rushstack/eslint-patch": "1.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "@vue/eslint-config-typescript": "11.0.3",
-    "eslint": "8.41.0",
+    "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-cypress": "2.13.3",
