--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.32",
+  "version": "1.2.33",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -13,10 +13,12 @@
   },
   "main": "eslint-main-config.cjs",
   "scripts": {
-    "format": "prettier --write ."
+    "lint": "eslint --fix .",
+    "format": "prettier --write .",
+    "clean": "rimraf -g ./node_modules ./pnpm-lock.yaml ./.pnpm-debug.log",
+    "reinstall": "pnpm clean && pnpm install"
   },
   "dependencies": {
-    "@nuxt/eslint-config": "0.1.1",
     "@rushstack/eslint-patch": "1.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "@typescript-eslint/parser": "5.59.8",
