--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.40",
+  "version": "1.2.41",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@rushstack/eslint-patch": "1.3.0",
-    "@typescript-eslint/eslint-plugin": "5.59.6",
-    "@typescript-eslint/parser": "5.59.6",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "@vue/eslint-config-typescript": "11.0.3",
     "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
@@ -39,5 +39,8 @@
   },
   "devDependencies": {
     "prettier": "2.8.8"
+  },
+  "peerDependencies": {
+    "typescript": "<5.1.0"
   }
 }
