--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.51",
+  "version": "1.2.51-test",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-tsdoc": "0.2.17",
-    "eslint-plugin-vue": "9.16.1",
+    "eslint-plugin-vue": "9.15.1",
     "eslint-plugin-vuetify": "2.0.5",
     "vue-eslint-parser": "9.3.1"
   },
