--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.2.51-test",
+  "version": "1.2.52",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "reinstall": "pnpm clean && pnpm install"
   },
   "dependencies": {
+    "@nuxt/eslint-config": "0.1.1",
     "@rushstack/eslint-patch": "1.3.2",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
