--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,6 @@
-#PRIVATE
-.private
-
 # NODE
 node_modules
+dist
 
 # .env.*.local
 *.local
-
-# Logs
-logs
-*.log
-*.log*
-*gitlog
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-pnpm-debug.log*
-
-# VITEST
-coverage
