--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "1.4.0",
+  "version": "2.0.0-beta1",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -11,36 +11,51 @@
     "email": "charles.brebant@gmail.com",
     "url": "https://github.com/CharlesBT"
   },
-  "main": "eslint-main-config.cjs",
+  "private": true,
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "unbuild",
+    "prepack": "unbuild",
     "lint": "eslint --fix .",
     "format": "prettier --write .",
     "clean": "rimraf -g ./node_modules ./pnpm-lock.yaml ./.pnpm-debug.log",
     "reinstall": "pnpm clean && pnpm install"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "1.10.5",
-    "@typescript-eslint/eslint-plugin": "8.24.1",
-    "@typescript-eslint/parser": "8.24.1",
-    "@vue/eslint-config-typescript": "14.4.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-import-resolver-typescript": "3.8.3",
-    "eslint-plugin-cypress": "4.1.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-header": "3.1.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-tsdoc": "0.4.0",
-    "eslint-plugin-vue": "9.32.0",
-    "eslint-plugin-vuetify": "2.5.1",
-    "vue-eslint-parser": "9.4.3"
+    "@eslint/js": "^9.21.0",
+    "@nuxt/eslint-config": "^1.1.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vuetify": "^2.5.1",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.25.0"
   },
   "devDependencies": {
     "eslint": "^9.21.0",
-    "prettier": "3.5.2"
+    "prettier": "^3.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "unbuild": "^3.3.1"
   },
-  "peerDependencies": {
-    "eslint": "^8.57.0 || ^9.0.0"
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
