--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "2.0.0-beta2",
+  "version": "2.0.0-beta3",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -47,6 +47,7 @@
     "typescript-eslint": "^8.25.0"
   },
   "devDependencies": {
+    "@types/node": "22",
     "eslint": "^9.21.0",
     "prettier": "^3.5.2",
     "ts-node": "^10.9.2",
