--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "2.0.0-beta1",
+  "version": "2.0.0",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "@eslint/js": "^9.21.0",
-    "@nuxt/eslint-config": "^1.1.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import-x": "^4.6.1",
