--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "3.0.2",
+  "version": "3.5.0",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -34,13 +34,13 @@
   },
   "dependencies": {
     "@eslint/js": "^9.21.0",
-    "@nuxt/eslint-config": "1.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^9.32.0",
     "eslint-plugin-vuetify": "^2.5.1",
     "globals": "^16.0.0",
     "typescript-eslint": "^8.25.0"
