--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "3.5.5",
+  "version": "3.5.6",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -33,21 +33,21 @@
     "reinstall": "pnpm clean && pnpm install"
   },
   "dependencies": {
-    "@eslint/js": "^9.24.0",
+    "@eslint/js": "^9.26.0",
     "@vue/eslint-config-typescript": "^14.5.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-import-resolver-typescript": "^4.3.2",
-    "eslint-plugin-import-x": "^4.10.2",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import-x": "^4.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-vue": "^10.1.0",
     "eslint-plugin-vuetify": "^2.5.2",
     "globals": "^16.0.0",
-    "typescript-eslint": "^8.29.1"
+    "typescript-eslint": "^8.31.1"
   },
   "devDependencies": {
     "@types/node": "22",
-    "eslint": "^9.24.0",
+    "eslint": "^9.25.1",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
@@ -55,7 +55,8 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "unrs-resolver"
     ]
   }
 }
