--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@charlesbt/eslint-config-custom",
-  "version": "3.5.7",
+  "version": "3.5.8",
   "description": "Custom eslint config",
   "repository": {
     "type": "git",
@@ -29,25 +29,27 @@
     "prepack": "unbuild",
     "lint": "unbuild && eslint --fix .",
     "format": "prettier --write .",
+    "tc": "tsc --noEmit",
     "clean": "rimraf -g ./node_modules ./pnpm-lock.yaml ./.pnpm-debug.log",
-    "reinstall": "pnpm clean && pnpm install"
+    "reinstall": "pnpm clean && pnpm install",
+    "pkg:outdated": "pnpm -r outdated"
   },
   "dependencies": {
-    "@eslint/js": "^9.26.0",
+    "@eslint/js": "^9.29.0",
     "@vue/eslint-config-typescript": "^14.5.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-import-resolver-typescript": "^4.3.4",
-    "eslint-plugin-import-x": "^4.11.0",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.3",
+    "eslint-plugin-import-x": "^4.15.2",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-vue": "^10.1.0",
+    "eslint-plugin-vue": "^10.2.0",
     "eslint-plugin-vuetify": "^2.5.2",
-    "globals": "^16.0.0",
-    "typescript-eslint": "^8.31.1"
+    "globals": "^16.2.0",
+    "typescript-eslint": "^8.34.0"
   },
   "devDependencies": {
     "@types/node": "22",
-    "eslint": "^9.26.0",
+    "eslint": "^9.29.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
